# helix

./: .gitignore  .helixignore  Cargo.toml  README.md
.github/workflows/: aur.yml
docs/: README.md
docs/api/: commands.md
docs/architecture/: data-structures.md  improvements-summary.md  overview.md  remote-protocol.md
docs/examples/: basic-workflows.md
docs/user-guide/: getting-started.md  workflows.md
src/: main.rs
src/commands/: add.rs  branch.rs  checkout.rs  clone.rs  commit.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  pull.rs  push.rs  reset.rs  restore.rs  status.rs
src/core/: branch.rs  commit.rs  index.rs  mod.rs  object.rs  remote.rs  repository.rs
src/utils/: auth.rs  config.rs  file_utils.rs  hash_utils.rs  key_utils.rs  mod.rs  pack.rs  path_utils.rs  remote_client.rs
