[package]
name = "hx"
version = "0.1.0"
edition = "2021"
authors = ["hx Team"]
description = "A modern, fast Git alternative with better UX"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
indicatif = "0.17"
regex = "1.10"
ignore = "0.4"
tempfile = "3.8"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
bincode = "1.3"
rayon = "1.8"
dashmap = "5.5"
crossbeam-channel = "0.5"
notify = "6.1"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
warp = "0.3" 
similar = "2.7.0"
diffy = "0.4.2"
ed25519-dalek = "2.2.0"
rand = "0.8.5"
dirs = "6.0.0"
base64 = "0.21"
url = "2.5"
